// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocsTransformer - API builtins writes export entry for mapped types 1`] = `
{
  "exports": {
    "Mutable": {
      "id": "/test/src/index.tsx:Mutable",
      "type": "link",
    },
  },
  "links": {
    "/test/src/index.tsx:Mutable": {
      "description": null,
      "id": "/test/src/index.tsx:Mutable",
      "name": "Mutable",
      "type": "alias",
      "typeParameters": [
        {
          "constraint": null,
          "default": null,
          "name": "T",
          "type": "typeParameter",
        },
      ],
      "value": {
        "readonly": "-",
        "type": "mapped",
        "typeAnnotation": {
          "indexType": {
            "id": "/test/src/index.tsx:P",
            "name": "P",
            "type": "identifier",
          },
          "objectType": {
            "id": "/test/src/index.tsx:T",
            "name": "T",
            "type": "identifier",
          },
          "type": "indexedAccess",
        },
        "typeParameter": {
          "constraint": {
            "operator": "keyof",
            "type": "typeOperator",
            "value": {
              "id": "/test/src/index.tsx:T",
              "name": "T",
              "type": "identifier",
            },
          },
          "default": null,
          "isMappedType": true,
          "name": "P",
          "type": "typeParameter",
        },
      },
    },
  },
}
`;

exports[`DocsTransformer - API builtins writes export entry for referenced function 1`] = `
{
  "exports": {
    "d": {},
  },
  "links": {},
}
`;

exports[`DocsTransformer - API builtins writes export entry for referenced string 1`] = `
{
  "exports": {
    "c": {},
  },
  "links": {},
}
`;

exports[`DocsTransformer - API builtins writes export entry for static number 1`] = `
{
  "exports": {
    "a": {
      "id": "/test/src/index.tsx:a",
      "name": "a",
      "type": "variable",
      "typeAnnotation": {
        "type": "number",
      },
    },
  },
  "links": {},
}
`;

exports[`DocsTransformer - API builtins writes export entry for static string 1`] = `
{
  "exports": {
    "b": {
      "id": "/test/src/index.tsx:b",
      "name": "b",
      "type": "variable",
      "typeAnnotation": {
        "type": "string",
      },
    },
  },
  "links": {},
}
`;

exports[`DocsTransformer - API components writes export entry for React component 1`] = `
{
  "exports": {
    "App1": {
      "description": null,
      "id": "/test/src/index.tsx:App1",
      "name": "App1",
      "props": null,
      "type": "component",
      "typeParameters": [],
    },
  },
  "links": {},
}
`;

exports[`DocsTransformer - API components writes export entry for localName React component 1`] = `
{
  "exports": {
    "AppReal": {
      "description": null,
      "id": "/test/src/index.tsx:App2",
      "name": "AppReal",
      "props": null,
      "type": "component",
      "typeParameters": [],
    },
  },
  "links": {},
}
`;

exports[`DocsTransformer - API identifiers writes export entry for identifiers 1`] = `
{
  "exports": {
    "Column": {
      "id": "/test/src/column.tsx:Column",
      "name": "Column",
      "parameters": [
        {
          "description": null,
          "name": "props",
          "rest": false,
          "type": "parameter",
          "value": {
            "properties": {
              "id": {
                "default": null,
                "name": "id",
                "optional": false,
                "type": "property",
                "value": {
                  "type": "string",
                },
              },
            },
            "type": "object",
          },
        },
      ],
      "return": {
        "description": null,
        "type": "any",
      },
      "type": "function",
      "typeParameters": [],
    },
  },
  "links": {},
}
`;

exports[`DocsTransformer - API identifiers writes export entry for identifiers real file 1`] = `
{
  "exports": {
    "Column": {
      "id": "/test/src/src.tsx:SpectrumColumn",
      "name": "Column",
      "type": "variable",
      "typeAnnotation": {
        "parameters": [
          {
            "name": "props",
            "rest": false,
            "type": "parameter",
            "value": {
              "base": {
                "id": "/packages/@react-types/table/src/index.d.ts:SpectrumColumnProps",
                "type": "link",
              },
              "type": "application",
              "typeParameters": [
                {
                  "id": "/test/src/src.tsx:T",
                  "name": "T",
                  "type": "identifier",
                },
              ],
            },
          },
        ],
        "return": {
          "id": "/test/src/src.tsx:JSX.Element",
          "name": "JSX.Element",
          "type": "identifier",
        },
        "type": "function",
        "typeParameters": [
          {
            "constraint": null,
            "default": null,
            "name": "T",
            "type": "typeParameter",
          },
        ],
      },
    },
    "SpectrumColumnProps": {
      "extends": [],
      "id": "/packages/@react-types/table/src/index.d.ts:SpectrumColumnProps",
      "name": "SpectrumColumnProps",
      "properties": {
        "align": {
          "default": "'start'",
          "description": "The alignment of the column's contents relative to its allotted width.",
          "name": "align",
          "optional": true,
          "type": "property",
          "value": {
            "elements": [
              {
                "type": "string",
                "value": "start",
              },
              {
                "type": "string",
                "value": "center",
              },
              {
                "type": "string",
                "value": "end",
              },
            ],
            "type": "union",
          },
        },
        "allowsResizing": {
          "default": null,
          "description": "Whether the column allows resizing.",
          "name": "allowsResizing",
          "optional": true,
          "type": "property",
          "value": {
            "type": "boolean",
          },
        },
        "allowsSorting": {
          "default": null,
          "description": "Whether the column allows sorting.",
          "name": "allowsSorting",
          "optional": true,
          "type": "property",
          "value": {
            "type": "boolean",
          },
        },
        "childColumns": {
          "default": null,
          "description": "A list of child columns used when dynamically rendering nested child columns.",
          "name": "childColumns",
          "optional": true,
          "type": "property",
          "value": {
            "elementType": {
              "id": "/packages/@react-types/table/src/index.d.ts:T",
              "name": "T",
              "type": "identifier",
            },
            "type": "array",
          },
        },
        "children": {
          "default": null,
          "description": "Static child columns or content to render as the column header.",
          "name": "children",
          "optional": false,
          "type": "property",
          "value": {
            "elements": [
              {
                "name": "ReactNode",
                "type": "identifier",
              },
              {
                "base": {
                  "id": "/packages/@react-types/table/src/index.d.ts:ColumnElement",
                  "type": "link",
                },
                "type": "application",
                "typeParameters": [
                  {
                    "id": "/packages/@react-types/table/src/index.d.ts:T",
                    "name": "T",
                    "type": "identifier",
                  },
                ],
              },
              {
                "elementType": {
                  "base": {
                    "id": "/packages/@react-types/table/src/index.d.ts:ColumnElement",
                    "type": "link",
                  },
                  "type": "application",
                  "typeParameters": [
                    {
                      "id": "/packages/@react-types/table/src/index.d.ts:T",
                      "name": "T",
                      "type": "identifier",
                    },
                  ],
                },
                "type": "array",
              },
            ],
            "type": "union",
          },
        },
        "defaultWidth": {
          "default": null,
          "description": "The default width of the column.",
          "name": "defaultWidth",
          "optional": true,
          "type": "property",
          "value": {
            "elements": [
              {
                "id": "/packages/@react-types/table/src/index.d.ts:ColumnSize",
                "type": "link",
              },
              {
                "type": "null",
              },
            ],
            "type": "union",
          },
        },
        "hideHeader": {
          "default": null,
          "description": "Whether the column should hide its header text. A tooltip with the column's header text
will be displayed when the column header is focused instead. Note that this prop is specifically for columns
that contain ActionButtons in place of text content.",
          "name": "hideHeader",
          "optional": true,
          "type": "property",
          "value": {
            "type": "boolean",
          },
        },
        "isRowHeader": {
          "default": null,
          "description": "Whether a column is a [row header](https://www.w3.org/TR/wai-aria-1.1/#rowheader) and should be announced by assistive technology during row navigation.",
          "name": "isRowHeader",
          "optional": true,
          "type": "property",
          "value": {
            "type": "boolean",
          },
        },
        "maxWidth": {
          "default": null,
          "description": "The maximum width of the column.",
          "name": "maxWidth",
          "optional": true,
          "type": "property",
          "value": {
            "elements": [
              {
                "id": "/packages/@react-types/table/src/index.d.ts:ColumnStaticSize",
                "type": "link",
              },
              {
                "type": "null",
              },
            ],
            "type": "union",
          },
        },
        "minWidth": {
          "default": null,
          "description": "The minimum width of the column.",
          "name": "minWidth",
          "optional": true,
          "type": "property",
          "value": {
            "elements": [
              {
                "id": "/packages/@react-types/table/src/index.d.ts:ColumnStaticSize",
                "type": "link",
              },
              {
                "type": "null",
              },
            ],
            "type": "union",
          },
        },
        "showDivider": {
          "default": null,
          "description": "Whether the column should render a divider between it and the next column.",
          "name": "showDivider",
          "optional": true,
          "type": "property",
          "value": {
            "type": "boolean",
          },
        },
        "textValue": {
          "default": null,
          "description": "A string representation of the column's contents, used for accessibility announcements.",
          "name": "textValue",
          "optional": true,
          "type": "property",
          "value": {
            "type": "string",
          },
        },
        "title": {
          "default": null,
          "description": "Rendered contents of the column if \`children\` contains child columns.",
          "name": "title",
          "optional": true,
          "type": "property",
          "value": {
            "name": "ReactNode",
            "type": "identifier",
          },
        },
        "width": {
          "default": null,
          "description": "The width of the column.",
          "name": "width",
          "optional": true,
          "type": "property",
          "value": {
            "elements": [
              {
                "id": "/packages/@react-types/table/src/index.d.ts:ColumnSize",
                "type": "link",
              },
              {
                "type": "null",
              },
            ],
            "type": "union",
          },
        },
      },
      "type": "interface",
      "typeParameters": [
        {
          "constraint": null,
          "default": null,
          "name": "T",
          "type": "typeParameter",
        },
      ],
    },
  },
  "links": {
    "/packages/@react-types/table/src/index.d.ts:ColumnDynamicSize": {
      "description": "Widths that change size in relation to the remaining space and in ratio to other dynamic columns.
All numbers must be integers and greater than 0.
FR units take up remaining, if any, space in the table.",
      "id": "/packages/@react-types/table/src/index.d.ts:ColumnDynamicSize",
      "name": "ColumnDynamicSize",
      "type": "alias",
      "typeParameters": [],
      "value": {
        "elements": [
          {
            "type": "number",
          },
          {
            "type": "string",
            "value": "fr",
          },
        ],
        "type": "template",
      },
    },
    "/packages/@react-types/table/src/index.d.ts:ColumnElement": {
      "description": null,
      "id": "/packages/@react-types/table/src/index.d.ts:ColumnElement",
      "name": "ColumnElement",
      "type": "alias",
      "typeParameters": [
        {
          "constraint": null,
          "default": null,
          "name": "T",
          "type": "typeParameter",
        },
      ],
      "value": {
        "base": {
          "name": "ReactElement",
          "type": "identifier",
        },
        "type": "application",
        "typeParameters": [
          {
            "base": {
              "id": "/packages/@react-types/table/src/index.d.ts:ColumnProps",
              "type": "link",
            },
            "type": "application",
            "typeParameters": [
              {
                "id": "/packages/@react-types/table/src/index.d.ts:T",
                "name": "T",
                "type": "identifier",
              },
            ],
          },
        ],
      },
    },
    "/packages/@react-types/table/src/index.d.ts:ColumnProps": {
      "extends": [],
      "id": "/packages/@react-types/table/src/index.d.ts:ColumnProps",
      "name": "ColumnProps",
      "properties": {
        "allowsResizing": {
          "default": null,
          "description": "Whether the column allows resizing.",
          "name": "allowsResizing",
          "optional": true,
          "type": "property",
          "value": {
            "type": "boolean",
          },
        },
        "allowsSorting": {
          "default": null,
          "description": "Whether the column allows sorting.",
          "name": "allowsSorting",
          "optional": true,
          "type": "property",
          "value": {
            "type": "boolean",
          },
        },
        "childColumns": {
          "default": null,
          "description": "A list of child columns used when dynamically rendering nested child columns.",
          "name": "childColumns",
          "optional": true,
          "type": "property",
          "value": {
            "elementType": {
              "id": "/packages/@react-types/table/src/index.d.ts:T",
              "name": "T",
              "type": "identifier",
            },
            "type": "array",
          },
        },
        "children": {
          "default": null,
          "description": "Static child columns or content to render as the column header.",
          "name": "children",
          "optional": false,
          "type": "property",
          "value": {
            "elements": [
              {
                "name": "ReactNode",
                "type": "identifier",
              },
              {
                "base": {
                  "id": "/packages/@react-types/table/src/index.d.ts:ColumnElement",
                  "type": "link",
                },
                "type": "application",
                "typeParameters": [
                  {
                    "id": "/packages/@react-types/table/src/index.d.ts:T",
                    "name": "T",
                    "type": "identifier",
                  },
                ],
              },
              {
                "elementType": {
                  "base": {
                    "id": "/packages/@react-types/table/src/index.d.ts:ColumnElement",
                    "type": "link",
                  },
                  "type": "application",
                  "typeParameters": [
                    {
                      "id": "/packages/@react-types/table/src/index.d.ts:T",
                      "name": "T",
                      "type": "identifier",
                    },
                  ],
                },
                "type": "array",
              },
            ],
            "type": "union",
          },
        },
        "defaultWidth": {
          "default": null,
          "description": "The default width of the column.",
          "name": "defaultWidth",
          "optional": true,
          "type": "property",
          "value": {
            "elements": [
              {
                "id": "/packages/@react-types/table/src/index.d.ts:ColumnSize",
                "type": "link",
              },
              {
                "type": "null",
              },
            ],
            "type": "union",
          },
        },
        "isRowHeader": {
          "default": null,
          "description": "Whether a column is a [row header](https://www.w3.org/TR/wai-aria-1.1/#rowheader) and should be announced by assistive technology during row navigation.",
          "name": "isRowHeader",
          "optional": true,
          "type": "property",
          "value": {
            "type": "boolean",
          },
        },
        "maxWidth": {
          "default": null,
          "description": "The maximum width of the column.",
          "name": "maxWidth",
          "optional": true,
          "type": "property",
          "value": {
            "elements": [
              {
                "id": "/packages/@react-types/table/src/index.d.ts:ColumnStaticSize",
                "type": "link",
              },
              {
                "type": "null",
              },
            ],
            "type": "union",
          },
        },
        "minWidth": {
          "default": null,
          "description": "The minimum width of the column.",
          "name": "minWidth",
          "optional": true,
          "type": "property",
          "value": {
            "elements": [
              {
                "id": "/packages/@react-types/table/src/index.d.ts:ColumnStaticSize",
                "type": "link",
              },
              {
                "type": "null",
              },
            ],
            "type": "union",
          },
        },
        "textValue": {
          "default": null,
          "description": "A string representation of the column's contents, used for accessibility announcements.",
          "name": "textValue",
          "optional": true,
          "type": "property",
          "value": {
            "type": "string",
          },
        },
        "title": {
          "default": null,
          "description": "Rendered contents of the column if \`children\` contains child columns.",
          "name": "title",
          "optional": true,
          "type": "property",
          "value": {
            "name": "ReactNode",
            "type": "identifier",
          },
        },
        "width": {
          "default": null,
          "description": "The width of the column.",
          "name": "width",
          "optional": true,
          "type": "property",
          "value": {
            "elements": [
              {
                "id": "/packages/@react-types/table/src/index.d.ts:ColumnSize",
                "type": "link",
              },
              {
                "type": "null",
              },
            ],
            "type": "union",
          },
        },
      },
      "type": "interface",
      "typeParameters": [
        {
          "constraint": null,
          "default": null,
          "name": "T",
          "type": "typeParameter",
        },
      ],
    },
    "/packages/@react-types/table/src/index.d.ts:ColumnSize": {
      "description": "All possible sizes a column can be assigned.",
      "id": "/packages/@react-types/table/src/index.d.ts:ColumnSize",
      "name": "ColumnSize",
      "type": "alias",
      "typeParameters": [],
      "value": {
        "elements": [
          {
            "id": "/packages/@react-types/table/src/index.d.ts:ColumnStaticSize",
            "type": "link",
          },
          {
            "id": "/packages/@react-types/table/src/index.d.ts:ColumnDynamicSize",
            "type": "link",
          },
        ],
        "type": "union",
      },
    },
    "/packages/@react-types/table/src/index.d.ts:ColumnStaticSize": {
      "description": "Widths that result in a constant pixel value for the same Table width.",
      "id": "/packages/@react-types/table/src/index.d.ts:ColumnStaticSize",
      "name": "ColumnStaticSize",
      "type": "alias",
      "typeParameters": [],
      "value": {
        "elements": [
          {
            "type": "number",
          },
          {
            "elements": [
              {
                "type": "number",
              },
            ],
            "type": "template",
          },
          {
            "elements": [
              {
                "type": "number",
              },
              {
                "type": "string",
                "value": "%",
              },
            ],
            "type": "template",
          },
        ],
        "type": "union",
      },
    },
    "/packages/@react-types/table/src/index.d.ts:SpectrumColumnProps": {
      "extends": [],
      "id": "/packages/@react-types/table/src/index.d.ts:SpectrumColumnProps",
      "name": "SpectrumColumnProps",
      "properties": {
        "align": {
          "default": "'start'",
          "description": "The alignment of the column's contents relative to its allotted width.",
          "name": "align",
          "optional": true,
          "type": "property",
          "value": {
            "elements": [
              {
                "type": "string",
                "value": "start",
              },
              {
                "type": "string",
                "value": "center",
              },
              {
                "type": "string",
                "value": "end",
              },
            ],
            "type": "union",
          },
        },
        "allowsResizing": {
          "default": null,
          "description": "Whether the column allows resizing.",
          "name": "allowsResizing",
          "optional": true,
          "type": "property",
          "value": {
            "type": "boolean",
          },
        },
        "allowsSorting": {
          "default": null,
          "description": "Whether the column allows sorting.",
          "name": "allowsSorting",
          "optional": true,
          "type": "property",
          "value": {
            "type": "boolean",
          },
        },
        "childColumns": {
          "default": null,
          "description": "A list of child columns used when dynamically rendering nested child columns.",
          "name": "childColumns",
          "optional": true,
          "type": "property",
          "value": {
            "elementType": {
              "id": "/packages/@react-types/table/src/index.d.ts:T",
              "name": "T",
              "type": "identifier",
            },
            "type": "array",
          },
        },
        "children": {
          "default": null,
          "description": "Static child columns or content to render as the column header.",
          "name": "children",
          "optional": false,
          "type": "property",
          "value": {
            "elements": [
              {
                "name": "ReactNode",
                "type": "identifier",
              },
              {
                "base": {
                  "id": "/packages/@react-types/table/src/index.d.ts:ColumnElement",
                  "type": "link",
                },
                "type": "application",
                "typeParameters": [
                  {
                    "id": "/packages/@react-types/table/src/index.d.ts:T",
                    "name": "T",
                    "type": "identifier",
                  },
                ],
              },
              {
                "elementType": {
                  "base": {
                    "id": "/packages/@react-types/table/src/index.d.ts:ColumnElement",
                    "type": "link",
                  },
                  "type": "application",
                  "typeParameters": [
                    {
                      "id": "/packages/@react-types/table/src/index.d.ts:T",
                      "name": "T",
                      "type": "identifier",
                    },
                  ],
                },
                "type": "array",
              },
            ],
            "type": "union",
          },
        },
        "defaultWidth": {
          "default": null,
          "description": "The default width of the column.",
          "name": "defaultWidth",
          "optional": true,
          "type": "property",
          "value": {
            "elements": [
              {
                "id": "/packages/@react-types/table/src/index.d.ts:ColumnSize",
                "type": "link",
              },
              {
                "type": "null",
              },
            ],
            "type": "union",
          },
        },
        "hideHeader": {
          "default": null,
          "description": "Whether the column should hide its header text. A tooltip with the column's header text
will be displayed when the column header is focused instead. Note that this prop is specifically for columns
that contain ActionButtons in place of text content.",
          "name": "hideHeader",
          "optional": true,
          "type": "property",
          "value": {
            "type": "boolean",
          },
        },
        "isRowHeader": {
          "default": null,
          "description": "Whether a column is a [row header](https://www.w3.org/TR/wai-aria-1.1/#rowheader) and should be announced by assistive technology during row navigation.",
          "name": "isRowHeader",
          "optional": true,
          "type": "property",
          "value": {
            "type": "boolean",
          },
        },
        "maxWidth": {
          "default": null,
          "description": "The maximum width of the column.",
          "name": "maxWidth",
          "optional": true,
          "type": "property",
          "value": {
            "elements": [
              {
                "id": "/packages/@react-types/table/src/index.d.ts:ColumnStaticSize",
                "type": "link",
              },
              {
                "type": "null",
              },
            ],
            "type": "union",
          },
        },
        "minWidth": {
          "default": null,
          "description": "The minimum width of the column.",
          "name": "minWidth",
          "optional": true,
          "type": "property",
          "value": {
            "elements": [
              {
                "id": "/packages/@react-types/table/src/index.d.ts:ColumnStaticSize",
                "type": "link",
              },
              {
                "type": "null",
              },
            ],
            "type": "union",
          },
        },
        "showDivider": {
          "default": null,
          "description": "Whether the column should render a divider between it and the next column.",
          "name": "showDivider",
          "optional": true,
          "type": "property",
          "value": {
            "type": "boolean",
          },
        },
        "textValue": {
          "default": null,
          "description": "A string representation of the column's contents, used for accessibility announcements.",
          "name": "textValue",
          "optional": true,
          "type": "property",
          "value": {
            "type": "string",
          },
        },
        "title": {
          "default": null,
          "description": "Rendered contents of the column if \`children\` contains child columns.",
          "name": "title",
          "optional": true,
          "type": "property",
          "value": {
            "name": "ReactNode",
            "type": "identifier",
          },
        },
        "width": {
          "default": null,
          "description": "The width of the column.",
          "name": "width",
          "optional": true,
          "type": "property",
          "value": {
            "elements": [
              {
                "id": "/packages/@react-types/table/src/index.d.ts:ColumnSize",
                "type": "link",
              },
              {
                "type": "null",
              },
            ],
            "type": "union",
          },
        },
      },
      "type": "interface",
      "typeParameters": [
        {
          "constraint": null,
          "default": null,
          "name": "T",
          "type": "typeParameter",
        },
      ],
    },
  },
}
`;

exports[`DocsTransformer - API interface merging merges omit properties when extending 1`] = `
{
  "exports": {
    "Baz": {
      "extends": [],
      "id": "/test/src/index.tsx:Baz",
      "name": "Baz",
      "properties": {
        "foo": {
          "default": null,
          "name": "foo",
          "optional": false,
          "type": "property",
          "value": {
            "type": "string",
          },
        },
      },
      "type": "interface",
      "typeParameters": [],
    },
  },
  "links": {},
}
`;

exports[`DocsTransformer - API interface merging merges properties when extending 1`] = `
{
  "exports": {
    "State": {
      "extends": [],
      "id": "/test/src/index.tsx:State",
      "name": "State",
      "properties": {
        "foo": {
          "default": null,
          "name": "foo",
          "optional": false,
          "type": "property",
          "value": {
            "id": "/test/src/index.tsx:Foo",
            "name": "Foo",
            "type": "identifier",
          },
        },
        "isValid": {
          "default": null,
          "name": "isValid",
          "optional": false,
          "type": "property",
          "value": {
            "type": "boolean",
          },
        },
      },
      "type": "interface",
      "typeParameters": [],
    },
  },
  "links": {},
}
`;

exports[`DocsTransformer - API interface merging merges properties when extending and does not substitute generics when none are provided 1`] = `
{
  "exports": {
    "Baz": {
      "extends": [],
      "id": "/test/src/index.tsx:Baz",
      "name": "Baz",
      "properties": {
        "coo": {
          "default": null,
          "name": "coo",
          "optional": false,
          "type": "property",
          "value": {
            "id": "/test/src/index.tsx:F",
            "name": "F",
            "type": "identifier",
          },
        },
        "foo": {
          "default": null,
          "name": "foo",
          "optional": false,
          "type": "property",
          "value": {
            "type": "string",
          },
        },
      },
      "type": "interface",
      "typeParameters": [],
    },
  },
  "links": {},
}
`;

exports[`DocsTransformer - API interface merging merges properties when extending with split exports 1`] = `
{
  "exports": {
    "SpectrumTagGroupProps": {
      "extends": [],
      "id": "/test/src/index.tsx:SpectrumTagGroupProps",
      "name": "SpectrumTagGroupProps",
      "properties": {
        "actionLabel": {
          "default": null,
          "name": "actionLabel",
          "optional": true,
          "type": "property",
          "value": {
            "type": "string",
          },
        },
        "allowsRemoving": {
          "default": null,
          "description": "Whether the TagGroup allows removal of tags.",
          "name": "allowsRemoving",
          "optional": true,
          "type": "property",
          "value": {
            "type": "boolean",
          },
        },
        "aria-describedby": {
          "default": null,
          "description": "Identifies the element (or elements) that describes the object.",
          "name": "aria-describedby",
          "optional": true,
          "type": "property",
          "value": {
            "type": "string",
          },
        },
        "aria-details": {
          "default": null,
          "description": "Identifies the element (or elements) that provide a detailed, extended description for the object.",
          "name": "aria-details",
          "optional": true,
          "type": "property",
          "value": {
            "type": "string",
          },
        },
        "aria-label": {
          "default": null,
          "description": "Defines a string value that labels the current element.",
          "name": "aria-label",
          "optional": true,
          "type": "property",
          "value": {
            "type": "string",
          },
        },
        "aria-labelledby": {
          "default": null,
          "description": "Identifies the element (or elements) that labels the current element.",
          "name": "aria-labelledby",
          "optional": true,
          "type": "property",
          "value": {
            "type": "string",
          },
        },
        "children": {
          "default": null,
          "description": "The contents of the collection.",
          "name": "children",
          "optional": false,
          "type": "property",
          "value": {
            "base": {
              "id": "/packages/@react-types/shared/src/collections.d.ts:CollectionChildren",
              "type": "link",
            },
            "type": "application",
            "typeParameters": [
              {
                "id": "/test/src/index.tsx:T",
                "name": "T",
                "type": "identifier",
              },
            ],
          },
        },
        "description": {
          "default": null,
          "description": "A description for the field. Provides a hint such as specific requirements for what to choose.",
          "name": "description",
          "optional": true,
          "type": "property",
          "value": {
            "name": "ReactNode",
            "type": "identifier",
          },
        },
        "errorMessage": {
          "default": null,
          "description": "An error message for the field.",
          "name": "errorMessage",
          "optional": true,
          "type": "property",
          "value": {
            "name": "ReactNode",
            "type": "identifier",
          },
        },
        "id": {
          "default": null,
          "description": "The element's unique identifier. See [MDN](https://developer.mozilla.org/en-US/docs/Web/HTML/Global_attributes/id).",
          "name": "id",
          "optional": true,
          "type": "property",
          "value": {
            "type": "string",
          },
        },
        "isDisabled": {
          "default": null,
          "description": "Whether the description is displayed with lighter text.",
          "name": "isDisabled",
          "optional": true,
          "type": "property",
          "value": {
            "type": "boolean",
          },
        },
        "isRequired": {
          "default": null,
          "description": "Whether user input is required on the input before form submission.
Often paired with the \`necessityIndicator\` prop to add a visual indicator to the input.",
          "name": "isRequired",
          "optional": true,
          "type": "property",
          "value": {
            "type": "boolean",
          },
        },
        "items": {
          "default": null,
          "description": "Item objects in the collection.",
          "name": "items",
          "optional": true,
          "type": "property",
          "value": {
            "base": {
              "id": "/packages/@react-types/shared/src/collections.d.ts:Iterable",
              "name": "Iterable",
              "type": "identifier",
            },
            "type": "application",
            "typeParameters": [
              {
                "id": "/test/src/index.tsx:T",
                "name": "T",
                "type": "identifier",
              },
            ],
          },
        },
        "keyboardDelegate": {
          "default": null,
          "description": "An optional keyboard delegate to handle arrow key navigation,
to override the default.",
          "name": "keyboardDelegate",
          "optional": true,
          "type": "property",
          "value": {
            "base": {
              "id": "/packages/@react-aria/tag/src/TagKeyboardDelegate.ts:TagKeyboardDelegate",
              "type": "link",
            },
            "type": "application",
            "typeParameters": [
              {
                "id": "/test/src/index.tsx:T",
                "name": "T",
                "type": "identifier",
              },
            ],
          },
        },
        "maxRows": {
          "default": null,
          "description": "Limit the number of rows initially shown. This will render a button that allows the user to expand to show all tags.",
          "name": "maxRows",
          "optional": true,
          "type": "property",
          "value": {
            "type": "number",
          },
        },
        "onAction": {
          "default": null,
          "name": "onAction",
          "optional": true,
          "type": "property",
          "value": {
            "parameters": [],
            "return": {
              "description": null,
              "type": "void",
            },
            "type": "function",
            "typeParameters": [],
          },
        },
        "onRemove": {
          "default": null,
          "description": "Called when the user removes a tag.",
          "name": "onRemove",
          "optional": true,
          "type": "property",
          "value": {
            "parameters": [
              {
                "description": null,
                "name": "key",
                "rest": false,
                "type": "parameter",
                "value": {
                  "name": "Key",
                  "type": "identifier",
                },
              },
            ],
            "return": {
              "description": null,
              "type": "void",
            },
            "type": "function",
            "typeParameters": [],
          },
        },
        "validationState": {
          "default": null,
          "description": "Whether the input should display its "valid" or "invalid" visual styling.",
          "name": "validationState",
          "optional": true,
          "type": "property",
          "value": {
            "id": "/packages/@react-types/shared/src/inputs.d.ts:ValidationState",
            "type": "link",
          },
        },
      },
      "type": "interface",
      "typeParameters": [
        {
          "constraint": null,
          "default": null,
          "name": "T",
          "type": "typeParameter",
        },
      ],
    },
  },
  "links": {
    "/packages/@react-aria/tag/src/TagKeyboardDelegate.ts:TagKeyboardDelegate": {
      "extends": [],
      "id": "/packages/@react-aria/tag/src/TagKeyboardDelegate.ts:TagKeyboardDelegate",
      "name": "TagKeyboardDelegate",
      "properties": {
        "collection": {
          "access": "private",
          "default": null,
          "name": "collection",
          "optional": false,
          "type": "property",
          "value": {
            "base": {
              "id": "/packages/@react-types/shared/src/collections.d.ts:Collection",
              "type": "link",
            },
            "type": "application",
            "typeParameters": [
              {
                "id": "/packages/@react-aria/tag/src/TagKeyboardDelegate.ts:T",
                "name": "T",
                "type": "identifier",
              },
            ],
          },
        },
        "constructor": {
          "default": null,
          "name": "constructor",
          "type": "method",
          "value": {
            "parameters": [
              {
                "description": null,
                "name": "collection",
                "rest": false,
                "type": "parameter",
                "value": {
                  "base": {
                    "id": "/packages/@react-types/shared/src/collections.d.ts:Collection",
                    "type": "link",
                  },
                  "type": "application",
                  "typeParameters": [
                    {
                      "id": "/packages/@react-aria/tag/src/TagKeyboardDelegate.ts:T",
                      "name": "T",
                      "type": "identifier",
                    },
                  ],
                },
              },
              {
                "description": null,
                "name": "direction",
                "rest": false,
                "type": "parameter",
                "value": {
                  "id": "/packages/@react-types/shared/src/locale.d.ts:Direction",
                  "type": "link",
                },
              },
            ],
            "return": {
              "description": null,
              "type": "void",
            },
            "type": "function",
            "typeParameters": [],
          },
        },
        "direction": {
          "access": "private",
          "default": null,
          "name": "direction",
          "optional": false,
          "type": "property",
          "value": {
            "id": "/packages/@react-types/shared/src/locale.d.ts:Direction",
            "type": "link",
          },
        },
        "getFirstKey": {
          "default": null,
          "name": "getFirstKey",
          "type": "method",
          "value": {
            "parameters": [],
            "return": {
              "description": null,
              "type": "void",
            },
            "type": "function",
            "typeParameters": [],
          },
        },
        "getKeyAbove": {
          "default": null,
          "name": "getKeyAbove",
          "type": "method",
          "value": {
            "parameters": [
              {
                "description": null,
                "name": "key",
                "rest": false,
                "type": "parameter",
                "value": {
                  "type": "any",
                },
              },
            ],
            "return": {
              "description": null,
              "type": "void",
            },
            "type": "function",
            "typeParameters": [],
          },
        },
        "getKeyBelow": {
          "default": null,
          "name": "getKeyBelow",
          "type": "method",
          "value": {
            "parameters": [
              {
                "description": null,
                "name": "key",
                "rest": false,
                "type": "parameter",
                "value": {
                  "type": "any",
                },
              },
            ],
            "return": {
              "description": null,
              "type": "void",
            },
            "type": "function",
            "typeParameters": [],
          },
        },
        "getKeyLeftOf": {
          "default": null,
          "name": "getKeyLeftOf",
          "type": "method",
          "value": {
            "parameters": [
              {
                "description": null,
                "name": "key",
                "rest": false,
                "type": "parameter",
                "value": {
                  "name": "Key",
                  "type": "identifier",
                },
              },
            ],
            "return": {
              "description": null,
              "type": "void",
            },
            "type": "function",
            "typeParameters": [],
          },
        },
        "getKeyPageAbove": {
          "default": null,
          "name": "getKeyPageAbove",
          "type": "method",
          "value": {
            "parameters": [
              {
                "description": null,
                "name": "key",
                "rest": false,
                "type": "parameter",
                "value": {
                  "type": "any",
                },
              },
            ],
            "return": {
              "description": null,
              "type": "void",
            },
            "type": "function",
            "typeParameters": [],
          },
        },
        "getKeyPageBelow": {
          "default": null,
          "name": "getKeyPageBelow",
          "type": "method",
          "value": {
            "parameters": [
              {
                "description": null,
                "name": "key",
                "rest": false,
                "type": "parameter",
                "value": {
                  "type": "any",
                },
              },
            ],
            "return": {
              "description": null,
              "type": "void",
            },
            "type": "function",
            "typeParameters": [],
          },
        },
        "getKeyRightOf": {
          "default": null,
          "name": "getKeyRightOf",
          "type": "method",
          "value": {
            "parameters": [
              {
                "description": null,
                "name": "key",
                "rest": false,
                "type": "parameter",
                "value": {
                  "name": "Key",
                  "type": "identifier",
                },
              },
            ],
            "return": {
              "description": null,
              "type": "void",
            },
            "type": "function",
            "typeParameters": [],
          },
        },
        "getLastKey": {
          "default": null,
          "name": "getLastKey",
          "type": "method",
          "value": {
            "parameters": [],
            "return": {
              "description": null,
              "type": "void",
            },
            "type": "function",
            "typeParameters": [],
          },
        },
      },
      "type": "interface",
      "typeParameters": [
        {
          "constraint": null,
          "default": null,
          "name": "T",
          "type": "typeParameter",
        },
      ],
    },
    "/packages/@react-types/shared/src/collections.d.ts:Collection": {
      "description": "A generic interface to access a readonly sequential
collection of unique keyed items.",
      "extends": [
        {
          "base": {
            "id": "/packages/@react-types/shared/src/collections.d.ts:Iterable",
            "name": "Iterable",
            "type": "identifier",
          },
          "type": "application",
          "typeParameters": [
            {
              "id": "/packages/@react-types/shared/src/collections.d.ts:T",
              "name": "T",
              "type": "identifier",
            },
          ],
        },
      ],
      "id": "/packages/@react-types/shared/src/collections.d.ts:Collection",
      "name": "Collection",
      "properties": {
        "at": {
          "default": null,
          "description": "Get an item by the index of its key.",
          "name": "at",
          "type": "method",
          "value": {
            "parameters": [
              {
                "description": null,
                "name": "idx",
                "rest": false,
                "type": "parameter",
                "value": {
                  "type": "number",
                },
              },
            ],
            "return": {
              "description": null,
              "elements": [
                {
                  "id": "/packages/@react-types/shared/src/collections.d.ts:T",
                  "name": "T",
                  "type": "identifier",
                },
                {
                  "type": "null",
                },
              ],
              "type": "union",
            },
            "type": "function",
            "typeParameters": [],
          },
        },
        "getChildren": {
          "default": null,
          "description": "Iterate over the child items of the given key.",
          "name": "getChildren",
          "type": "method",
          "value": {
            "parameters": [
              {
                "description": null,
                "name": "key",
                "rest": false,
                "type": "parameter",
                "value": {
                  "name": "Key",
                  "type": "identifier",
                },
              },
            ],
            "return": {
              "base": {
                "id": "/packages/@react-types/shared/src/collections.d.ts:Iterable",
                "name": "Iterable",
                "type": "identifier",
              },
              "description": null,
              "type": "application",
              "typeParameters": [
                {
                  "id": "/packages/@react-types/shared/src/collections.d.ts:T",
                  "name": "T",
                  "type": "identifier",
                },
              ],
            },
            "type": "function",
            "typeParameters": [],
          },
        },
        "getFirstKey": {
          "default": null,
          "description": "Get the first key in the collection.",
          "name": "getFirstKey",
          "type": "method",
          "value": {
            "parameters": [],
            "return": {
              "description": null,
              "elements": [
                {
                  "name": "Key",
                  "type": "identifier",
                },
                {
                  "type": "null",
                },
              ],
              "type": "union",
            },
            "type": "function",
            "typeParameters": [],
          },
        },
        "getItem": {
          "default": null,
          "description": "Get an item by its key.",
          "name": "getItem",
          "type": "method",
          "value": {
            "parameters": [
              {
                "description": null,
                "name": "key",
                "rest": false,
                "type": "parameter",
                "value": {
                  "name": "Key",
                  "type": "identifier",
                },
              },
            ],
            "return": {
              "description": null,
              "elements": [
                {
                  "id": "/packages/@react-types/shared/src/collections.d.ts:T",
                  "name": "T",
                  "type": "identifier",
                },
                {
                  "type": "null",
                },
              ],
              "type": "union",
            },
            "type": "function",
            "typeParameters": [],
          },
        },
        "getKeyAfter": {
          "default": null,
          "description": "Get the key that comes after the given key in the collection.",
          "name": "getKeyAfter",
          "type": "method",
          "value": {
            "parameters": [
              {
                "description": null,
                "name": "key",
                "rest": false,
                "type": "parameter",
                "value": {
                  "name": "Key",
                  "type": "identifier",
                },
              },
            ],
            "return": {
              "description": null,
              "elements": [
                {
                  "name": "Key",
                  "type": "identifier",
                },
                {
                  "type": "null",
                },
              ],
              "type": "union",
            },
            "type": "function",
            "typeParameters": [],
          },
        },
        "getKeyBefore": {
          "default": null,
          "description": "Get the key that comes before the given key in the collection.",
          "name": "getKeyBefore",
          "type": "method",
          "value": {
            "parameters": [
              {
                "description": null,
                "name": "key",
                "rest": false,
                "type": "parameter",
                "value": {
                  "name": "Key",
                  "type": "identifier",
                },
              },
            ],
            "return": {
              "description": null,
              "elements": [
                {
                  "name": "Key",
                  "type": "identifier",
                },
                {
                  "type": "null",
                },
              ],
              "type": "union",
            },
            "type": "function",
            "typeParameters": [],
          },
        },
        "getKeys": {
          "default": null,
          "description": "Iterate over all keys in the collection.",
          "name": "getKeys",
          "type": "method",
          "value": {
            "parameters": [],
            "return": {
              "base": {
                "id": "/packages/@react-types/shared/src/collections.d.ts:Iterable",
                "name": "Iterable",
                "type": "identifier",
              },
              "description": null,
              "type": "application",
              "typeParameters": [
                {
                  "name": "Key",
                  "type": "identifier",
                },
              ],
            },
            "type": "function",
            "typeParameters": [],
          },
        },
        "getLastKey": {
          "default": null,
          "description": "Get the last key in the collection.",
          "name": "getLastKey",
          "type": "method",
          "value": {
            "parameters": [],
            "return": {
              "description": null,
              "elements": [
                {
                  "name": "Key",
                  "type": "identifier",
                },
                {
                  "type": "null",
                },
              ],
              "type": "union",
            },
            "type": "function",
            "typeParameters": [],
          },
        },
        "getTextValue": {
          "default": null,
          "description": "Returns a string representation of the item's contents.",
          "name": "getTextValue",
          "type": "method",
          "value": {
            "parameters": [
              {
                "description": null,
                "name": "key",
                "rest": false,
                "type": "parameter",
                "value": {
                  "name": "Key",
                  "type": "identifier",
                },
              },
            ],
            "return": {
              "description": null,
              "type": "string",
            },
            "type": "function",
            "typeParameters": [],
          },
        },
        "size": {
          "default": null,
          "description": "The number of items in the collection.",
          "name": "size",
          "optional": false,
          "type": "property",
          "value": {
            "type": "number",
          },
        },
      },
      "type": "interface",
      "typeParameters": [
        {
          "constraint": null,
          "default": null,
          "name": "T",
          "type": "typeParameter",
        },
      ],
    },
    "/packages/@react-types/shared/src/collections.d.ts:CollectionChildren": {
      "description": null,
      "id": "/packages/@react-types/shared/src/collections.d.ts:CollectionChildren",
      "name": "CollectionChildren",
      "type": "alias",
      "typeParameters": [
        {
          "constraint": null,
          "default": null,
          "name": "T",
          "type": "typeParameter",
        },
      ],
      "value": {
        "elements": [
          {
            "base": {
              "id": "/packages/@react-types/shared/src/collections.d.ts:CollectionElement",
              "type": "link",
            },
            "type": "application",
            "typeParameters": [
              {
                "id": "/packages/@react-types/shared/src/collections.d.ts:T",
                "name": "T",
                "type": "identifier",
              },
            ],
          },
          {
            "elementType": {
              "base": {
                "id": "/packages/@react-types/shared/src/collections.d.ts:CollectionElement",
                "type": "link",
              },
              "type": "application",
              "typeParameters": [
                {
                  "id": "/packages/@react-types/shared/src/collections.d.ts:T",
                  "name": "T",
                  "type": "identifier",
                },
              ],
            },
            "type": "array",
          },
          {
            "parameters": [
              {
                "name": "item",
                "rest": false,
                "type": "parameter",
                "value": {
                  "id": "/packages/@react-types/shared/src/collections.d.ts:T",
                  "name": "T",
                  "type": "identifier",
                },
              },
            ],
            "return": {
              "base": {
                "id": "/packages/@react-types/shared/src/collections.d.ts:CollectionElement",
                "type": "link",
              },
              "type": "application",
              "typeParameters": [
                {
                  "id": "/packages/@react-types/shared/src/collections.d.ts:T",
                  "name": "T",
                  "type": "identifier",
                },
              ],
            },
            "type": "function",
            "typeParameters": [],
          },
        ],
        "type": "union",
      },
    },
    "/packages/@react-types/shared/src/collections.d.ts:CollectionElement": {
      "description": null,
      "id": "/packages/@react-types/shared/src/collections.d.ts:CollectionElement",
      "name": "CollectionElement",
      "type": "alias",
      "typeParameters": [
        {
          "constraint": null,
          "default": null,
          "name": "T",
          "type": "typeParameter",
        },
      ],
      "value": {
        "elements": [
          {
            "base": {
              "id": "/packages/@react-types/shared/src/collections.d.ts:SectionElement",
              "type": "link",
            },
            "type": "application",
            "typeParameters": [
              {
                "id": "/packages/@react-types/shared/src/collections.d.ts:T",
                "name": "T",
                "type": "identifier",
              },
            ],
          },
          {
            "base": {
              "id": "/packages/@react-types/shared/src/collections.d.ts:ItemElement",
              "type": "link",
            },
            "type": "application",
            "typeParameters": [
              {
                "id": "/packages/@react-types/shared/src/collections.d.ts:T",
                "name": "T",
                "type": "identifier",
              },
            ],
          },
        ],
        "type": "union",
      },
    },
    "/packages/@react-types/shared/src/collections.d.ts:ItemElement": {
      "description": null,
      "id": "/packages/@react-types/shared/src/collections.d.ts:ItemElement",
      "name": "ItemElement",
      "type": "alias",
      "typeParameters": [
        {
          "constraint": null,
          "default": null,
          "name": "T",
          "type": "typeParameter",
        },
      ],
      "value": {
        "base": {
          "name": "ReactElement",
          "type": "identifier",
        },
        "type": "application",
        "typeParameters": [
          {
            "base": {
              "id": "/packages/@react-types/shared/src/collections.d.ts:ItemProps",
              "type": "link",
            },
            "type": "application",
            "typeParameters": [
              {
                "id": "/packages/@react-types/shared/src/collections.d.ts:T",
                "name": "T",
                "type": "identifier",
              },
            ],
          },
        ],
      },
    },
    "/packages/@react-types/shared/src/collections.d.ts:ItemProps": {
      "extends": [],
      "id": "/packages/@react-types/shared/src/collections.d.ts:ItemProps",
      "name": "ItemProps",
      "properties": {
        "aria-label": {
          "default": null,
          "description": "An accessibility label for this item.",
          "name": "aria-label",
          "optional": true,
          "type": "property",
          "value": {
            "type": "string",
          },
        },
        "childItems": {
          "default": null,
          "description": "A list of child item objects. Used for dynamic collections.",
          "name": "childItems",
          "optional": true,
          "type": "property",
          "value": {
            "base": {
              "id": "/packages/@react-types/shared/src/collections.d.ts:Iterable",
              "name": "Iterable",
              "type": "identifier",
            },
            "type": "application",
            "typeParameters": [
              {
                "id": "/packages/@react-types/shared/src/collections.d.ts:T",
                "name": "T",
                "type": "identifier",
              },
            ],
          },
        },
        "children": {
          "default": null,
          "description": "Rendered contents of the item or child items.",
          "name": "children",
          "optional": false,
          "type": "property",
          "value": {
            "name": "ReactNode",
            "type": "identifier",
          },
        },
        "hasChildItems": {
          "default": null,
          "description": "Whether this item has children, even if not loaded yet.",
          "name": "hasChildItems",
          "optional": true,
          "type": "property",
          "value": {
            "type": "boolean",
          },
        },
        "textValue": {
          "default": null,
          "description": "A string representation of the item's contents, used for features like typeahead.",
          "name": "textValue",
          "optional": true,
          "type": "property",
          "value": {
            "type": "string",
          },
        },
        "title": {
          "default": null,
          "description": "Rendered contents of the item if \`children\` contains child items.",
          "name": "title",
          "optional": true,
          "type": "property",
          "value": {
            "name": "ReactNode",
            "type": "identifier",
          },
        },
      },
      "type": "interface",
      "typeParameters": [
        {
          "constraint": null,
          "default": null,
          "name": "T",
          "type": "typeParameter",
        },
      ],
    },
    "/packages/@react-types/shared/src/collections.d.ts:ItemRenderer": {
      "description": null,
      "id": "/packages/@react-types/shared/src/collections.d.ts:ItemRenderer",
      "name": "ItemRenderer",
      "type": "alias",
      "typeParameters": [
        {
          "constraint": null,
          "default": null,
          "name": "T",
          "type": "typeParameter",
        },
      ],
      "value": {
        "parameters": [
          {
            "name": "item",
            "rest": false,
            "type": "parameter",
            "value": {
              "id": "/packages/@react-types/shared/src/collections.d.ts:T",
              "name": "T",
              "type": "identifier",
            },
          },
        ],
        "return": {
          "base": {
            "id": "/packages/@react-types/shared/src/collections.d.ts:ItemElement",
            "type": "link",
          },
          "type": "application",
          "typeParameters": [
            {
              "id": "/packages/@react-types/shared/src/collections.d.ts:T",
              "name": "T",
              "type": "identifier",
            },
          ],
        },
        "type": "function",
        "typeParameters": [],
      },
    },
    "/packages/@react-types/shared/src/collections.d.ts:SectionElement": {
      "description": null,
      "id": "/packages/@react-types/shared/src/collections.d.ts:SectionElement",
      "name": "SectionElement",
      "type": "alias",
      "typeParameters": [
        {
          "constraint": null,
          "default": null,
          "name": "T",
          "type": "typeParameter",
        },
      ],
      "value": {
        "base": {
          "name": "ReactElement",
          "type": "identifier",
        },
        "type": "application",
        "typeParameters": [
          {
            "base": {
              "id": "/packages/@react-types/shared/src/collections.d.ts:SectionProps",
              "type": "link",
            },
            "type": "application",
            "typeParameters": [
              {
                "id": "/packages/@react-types/shared/src/collections.d.ts:T",
                "name": "T",
                "type": "identifier",
              },
            ],
          },
        ],
      },
    },
    "/packages/@react-types/shared/src/collections.d.ts:SectionProps": {
      "extends": [],
      "id": "/packages/@react-types/shared/src/collections.d.ts:SectionProps",
      "name": "SectionProps",
      "properties": {
        "aria-label": {
          "default": null,
          "description": "An accessibility label for the section.",
          "name": "aria-label",
          "optional": true,
          "type": "property",
          "value": {
            "type": "string",
          },
        },
        "children": {
          "default": null,
          "description": "Static child items or a function to render children.",
          "name": "children",
          "optional": false,
          "type": "property",
          "value": {
            "elements": [
              {
                "base": {
                  "id": "/packages/@react-types/shared/src/collections.d.ts:ItemElement",
                  "type": "link",
                },
                "type": "application",
                "typeParameters": [
                  {
                    "id": "/packages/@react-types/shared/src/collections.d.ts:T",
                    "name": "T",
                    "type": "identifier",
                  },
                ],
              },
              {
                "elementType": {
                  "base": {
                    "id": "/packages/@react-types/shared/src/collections.d.ts:ItemElement",
                    "type": "link",
                  },
                  "type": "application",
                  "typeParameters": [
                    {
                      "id": "/packages/@react-types/shared/src/collections.d.ts:T",
                      "name": "T",
                      "type": "identifier",
                    },
                  ],
                },
                "type": "array",
              },
              {
                "base": {
                  "id": "/packages/@react-types/shared/src/collections.d.ts:ItemRenderer",
                  "type": "link",
                },
                "type": "application",
                "typeParameters": [
                  {
                    "id": "/packages/@react-types/shared/src/collections.d.ts:T",
                    "name": "T",
                    "type": "identifier",
                  },
                ],
              },
            ],
            "type": "union",
          },
        },
        "items": {
          "default": null,
          "description": "Item objects in the section.",
          "name": "items",
          "optional": true,
          "type": "property",
          "value": {
            "base": {
              "id": "/packages/@react-types/shared/src/collections.d.ts:Iterable",
              "name": "Iterable",
              "type": "identifier",
            },
            "type": "application",
            "typeParameters": [
              {
                "id": "/packages/@react-types/shared/src/collections.d.ts:T",
                "name": "T",
                "type": "identifier",
              },
            ],
          },
        },
        "title": {
          "default": null,
          "description": "Rendered contents of the section, e.g. a header.",
          "name": "title",
          "optional": true,
          "type": "property",
          "value": {
            "name": "ReactNode",
            "type": "identifier",
          },
        },
      },
      "type": "interface",
      "typeParameters": [
        {
          "constraint": null,
          "default": null,
          "name": "T",
          "type": "typeParameter",
        },
      ],
    },
    "/packages/@react-types/shared/src/inputs.d.ts:ValidationState": {
      "description": null,
      "id": "/packages/@react-types/shared/src/inputs.d.ts:ValidationState",
      "name": "ValidationState",
      "type": "alias",
      "typeParameters": [],
      "value": {
        "elements": [
          {
            "type": "string",
            "value": "valid",
          },
          {
            "type": "string",
            "value": "invalid",
          },
        ],
        "type": "union",
      },
    },
    "/packages/@react-types/shared/src/locale.d.ts:Direction": {
      "description": null,
      "id": "/packages/@react-types/shared/src/locale.d.ts:Direction",
      "name": "Direction",
      "type": "alias",
      "typeParameters": [],
      "value": {
        "elements": [
          {
            "type": "string",
            "value": "ltr",
          },
          {
            "type": "string",
            "value": "rtl",
          },
        ],
        "type": "union",
      },
    },
  },
}
`;

exports[`DocsTransformer - API interfaces can infer properties 1`] = `
{
  "exports": {
    "IntrinsicHTMLAttributes": {
      "id": "/test/src/index.tsx:IntrinsicHTMLAttributes",
      "type": "link",
    },
  },
  "links": {
    "/test/src/index.tsx:IntrinsicHTMLAttributes": {
      "description": null,
      "id": "/test/src/index.tsx:IntrinsicHTMLAttributes",
      "name": "IntrinsicHTMLAttributes",
      "type": "alias",
      "typeParameters": [],
      "value": {
        "type": "mapped",
        "typeAnnotation": {
          "checkType": {
            "indexType": {
              "id": "/test/src/index.tsx:K",
              "name": "K",
              "type": "identifier",
            },
            "objectType": {
              "id": "/test/src/index.tsx:ReactDOM",
              "name": "ReactDOM",
              "type": "identifier",
            },
            "type": "indexedAccess",
          },
          "extendsType": {
            "base": {
              "id": "/test/src/index.tsx:DOMFactory",
              "name": "DOMFactory",
              "type": "identifier",
            },
            "type": "application",
            "typeParameters": [
              {
                "type": "infer",
                "value": {
                  "constraint": null,
                  "default": null,
                  "name": "T",
                  "type": "typeParameter",
                },
              },
              {
                "type": "any",
              },
            ],
          },
          "falseType": {
            "type": "never",
          },
          "trueType": {
            "id": "/test/src/index.tsx:T",
            "name": "T",
            "type": "identifier",
          },
          "type": "conditional",
        },
        "typeParameter": {
          "constraint": {
            "operator": "keyof",
            "type": "typeOperator",
            "value": {
              "id": "/test/src/index.tsx:ReactDOM",
              "name": "ReactDOM",
              "type": "identifier",
            },
          },
          "default": null,
          "isMappedType": true,
          "name": "K",
          "type": "typeParameter",
        },
      },
    },
  },
}
`;

exports[`DocsTransformer - API interfaces can omit properties 1`] = `
{
  "exports": {
    "State": {
      "extends": [],
      "id": "/test/src/index.tsx:State",
      "name": "State",
      "properties": {
        "b": {
          "default": null,
          "name": "b",
          "optional": false,
          "type": "property",
          "value": {
            "type": "string",
          },
        },
      },
      "type": "interface",
      "typeParameters": [],
    },
  },
  "links": {},
}
`;

exports[`DocsTransformer - API interfaces can pick properties 1`] = `
{
  "exports": {},
  "links": {},
}
`;

exports[`DocsTransformer - API interfaces follows imported interfaces 1`] = `
{
  "exports": {
    "Bar": {
      "id": "/test/src/index.tsx:Bar",
      "name": "Bar",
      "parameters": [
        {
          "description": null,
          "name": "props",
          "rest": false,
          "type": "parameter",
          "value": {
            "id": "/test/src/component.tsx:Foo",
            "type": "link",
          },
        },
      ],
      "return": {
        "description": null,
        "type": "null",
      },
      "type": "function",
      "typeParameters": [],
    },
  },
  "links": {
    "/test/src/component.tsx:Foo": {
      "extends": [],
      "id": "/test/src/component.tsx:Foo",
      "name": "Foo",
      "properties": {
        "a": {
          "default": null,
          "name": "a",
          "optional": false,
          "type": "property",
          "value": {
            "type": "number",
          },
        },
      },
      "type": "interface",
      "typeParameters": [],
    },
  },
}
`;

exports[`DocsTransformer - API interfaces follows local references 1`] = `
{
  "exports": {
    "State": {
      "extends": [],
      "id": "/test/src/index.tsx:State",
      "name": "State",
      "properties": {
        "foo": {
          "default": null,
          "name": "foo",
          "optional": false,
          "type": "property",
          "value": {
            "id": "/test/src/index.tsx:Foo",
            "type": "link",
          },
        },
      },
      "type": "interface",
      "typeParameters": [],
    },
  },
  "links": {
    "/test/src/index.tsx:Foo": {
      "description": null,
      "id": "/test/src/index.tsx:Foo",
      "name": "Foo",
      "type": "alias",
      "typeParameters": [],
      "value": {
        "type": "string",
      },
    },
  },
}
`;

exports[`DocsTransformer - API interfaces writes export entry for interface 1`] = `
{
  "exports": {
    "Foo": {
      "extends": [],
      "id": "/test/src/index.tsx:Foo",
      "name": "Foo",
      "properties": {
        "a": {
          "default": null,
          "name": "a",
          "optional": false,
          "type": "property",
          "value": {
            "type": "number",
          },
        },
      },
      "type": "interface",
      "typeParameters": [],
    },
  },
  "links": {},
}
`;

exports[`DocsTransformer - API links css modules 1`] = `
{
  "exports": {
    "theme": {
      "id": "/test/src/index.tsx:theme",
      "name": "theme",
      "type": "variable",
      "typeAnnotation": {
        "id": "/test/src/theme.tsx:Theme",
        "type": "link",
      },
    },
  },
  "links": {
    "/test/src/theme.tsx:CSSModule": {
      "description": null,
      "id": "/test/src/theme.tsx:CSSModule",
      "name": "CSSModule",
      "type": "alias",
      "typeParameters": [],
      "value": {
        "properties": {
          "className": {
            "default": null,
            "indexType": {
              "type": "string",
            },
            "name": "className",
            "type": "property",
            "value": {
              "type": "string",
            },
          },
        },
        "type": "object",
      },
    },
    "/test/src/theme.tsx:Theme": {
      "extends": [],
      "id": "/test/src/theme.tsx:Theme",
      "name": "Theme",
      "properties": {
        "global": {
          "default": null,
          "name": "global",
          "optional": true,
          "type": "property",
          "value": {
            "id": "/test/src/theme.tsx:CSSModule",
            "type": "link",
          },
        },
        "light": {
          "default": null,
          "name": "light",
          "optional": true,
          "type": "property",
          "value": {
            "id": "/test/src/theme.tsx:CSSModule",
            "type": "link",
          },
        },
      },
      "type": "interface",
      "typeParameters": [],
    },
  },
}
`;

exports[`DocsTransformer - API types writes export entry for complex type regex 1`] = `
{
  "exports": {
    "Foo": {
      "id": "/test/src/index.tsx:Foo",
      "type": "link",
    },
  },
  "links": {
    "/test/src/index.tsx:Foo": {
      "description": null,
      "id": "/test/src/index.tsx:Foo",
      "name": "Foo",
      "type": "alias",
      "typeParameters": [],
      "value": {
        "elements": [
          {
            "type": "number",
          },
          {
            "type": "string",
            "value": ".",
          },
          {
            "type": "number",
          },
          {
            "type": "string",
            "value": " ",
          },
          {
            "type": "string",
          },
        ],
        "type": "template",
      },
    },
  },
}
`;

exports[`DocsTransformer - API types writes export entry for type 1`] = `
{
  "exports": {
    "Foo": {
      "id": "/test/src/index.tsx:Foo",
      "type": "link",
    },
  },
  "links": {
    "/test/src/index.tsx:Foo": {
      "description": null,
      "id": "/test/src/index.tsx:Foo",
      "name": "Foo",
      "type": "alias",
      "typeParameters": [],
      "value": {
        "type": "number",
      },
    },
  },
}
`;

exports[`DocsTransformer - API types writes export entry for type regex 1`] = `
{
  "exports": {
    "Foo": {
      "id": "/test/src/index.tsx:Foo",
      "type": "link",
    },
  },
  "links": {
    "/test/src/index.tsx:Foo": {
      "description": null,
      "id": "/test/src/index.tsx:Foo",
      "name": "Foo",
      "type": "alias",
      "typeParameters": [],
      "value": {
        "elements": [
          {
            "type": "number",
          },
          {
            "type": "string",
            "value": "%",
          },
        ],
        "type": "template",
      },
    },
  },
}
`;

exports[`DocsTransformer - API types writes export entry for type union 1`] = `
{
  "exports": {
    "Foo": {
      "id": "/test/src/index.tsx:Foo",
      "type": "link",
    },
  },
  "links": {
    "/test/src/index.tsx:Foo": {
      "description": null,
      "id": "/test/src/index.tsx:Foo",
      "name": "Foo",
      "type": "alias",
      "typeParameters": [],
      "value": {
        "elements": [
          {
            "type": "number",
          },
          {
            "type": "string",
          },
        ],
        "type": "union",
      },
    },
  },
}
`;
